--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -792,6 +792,64 @@
         </div>
       </section>
 
+
+      <!-- Jump to chapters -->
+      <div class="alert alert-light border jumpbar" id="chapters">
+        <div class="d-flex flex-wrap align-items-center gap-2">
+          <strong class="mr-2">Jump to chapter:</strong>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+        </div>
+      </div>
+
+      <!-- Chapter 13 -->
+      <section id="ch13" class="chapter-anchor">
+        <h2 class="h5 chapter-header">Chapter 13 — Understanding rejection: Why the first constitutional proposal failed</h2>
+        <div class="row">
+          <div class="col-sm-6 col-md-4 mb-4">
+            <figure>
+              <a href="13. Rechazo.jpeg" class="glightbox" data-gallery="ch10">
+                <img src="13. Rechazo.jpeg" class="thumb" alt="Acuerdo por la Paz Social y Nueva Constitución 1">
+              </a>
+              <figcaption>Rechazo<br><small><em>(Alberto Valdes / EFE)</em></small></figcaption>
+            </figure>
+          </div>
+          <div class="col-sm-6 col-md-4 mb-4">
+            <figure>
+              <a href="13. The.jpeg" class="glightbox" data-gallery="ch10">
+                <img src="13. The.jpeg" class="thumb" alt="Acuerdo por la Paz Social y Nueva Constitución 2">
+              </a>
+              <figcaption>Acuerdo por la Paz Social y Nueva Constitución 2<br><small><em>(BCN)</em></small></figcaption>
+            </figure>
+          </div>
+          <div class="col-sm-6 col-md-4 mb-4">
+            <figure>
+              <a href="13. The.jpeg" class="glightbox" data-gallery="ch10">
+                <img src="13. The.jpeg" class="thumb" alt="The first agreement is announced">
+              </a>
+              <figcaption>The first agreement is announced<br><small><em>(La Tercera / Richard Ulloa)</em></small></figcaption>
+            </figure>
+          </div>
+        </div>
+      </section>
+
       <!-- Jump to chapters -->
       <div class="alert alert-light border jumpbar" id="chapters">
         <div class="d-flex flex-wrap align-items-center gap-2">
