--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -826,25 +826,25 @@
           <div class="col-sm-6 col-md-4 mb-4">
             <figure>
               <a href="13. Rechazo.jpeg" class="glightbox" data-gallery="ch10">
-                <img src="13. Rechazo.jpeg" class="thumb" alt="Acuerdo por la Paz Social y Nueva Constitución 1">
+                <img src="13. Rechazo.jpeg" class="thumb" alt="Rechazo">
               </a>
               <figcaption>Rechazo<br><small><em>(Alberto Valdes / EFE)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
             <figure>
-              <a href="13. The.jpeg" class="glightbox" data-gallery="ch10">
-                <img src="13. The.jpeg" class="thumb" alt="Acuerdo por la Paz Social y Nueva Constitución 2">
+              <a href="13. Apruebo.jpeg" class="glightbox" data-gallery="ch10">
+                <img src="13. Apruebo.jpeg" class="thumb" alt="Apruebo">
               </a>
-              <figcaption>Acuerdo por la Paz Social y Nueva Constitución 2<br><small><em>(BCN)</em></small></figcaption>
+              <figcaption>Apruebo<br><small><em>(AFP)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
             <figure>
-              <a href="13. The.jpeg" class="glightbox" data-gallery="ch10">
-                <img src="13. The.jpeg" class="thumb" alt="The first agreement is announced">
+              <a href="13. Voto.jpeg" class="glightbox" data-gallery="ch10">
+                <img src="13. Voto.jpeg" class="thumb" alt="The first agreement is announced">
               </a>
-              <figcaption>The first agreement is announced<br><small><em>(La Tercera / Richard Ulloa)</em></small></figcaption>
+              <figcaption>September 4, 2022<br><small><em>(ADN Radio)</em></small></figcaption>
             </figure>
           </div>
         </div>
