--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -1117,6 +1117,63 @@
         </div>
       </section>
 
+      <!-- Jump to chapters -->
+      <div class="alert alert-light border jumpbar" id="chapters">
+        <div class="d-flex flex-wrap align-items-center gap-2">
+          <strong class="mr-2">Jump to chapter:</strong>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
+          <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+        </div>
+      </div>
+
+      <!-- Chapter 17 -->
+      <section id="ch17" class="chapter-anchor">
+        <h2 class="h5 chapter-header">Chapter 17 — Coming to terms: Why the second constitutional proposal failed</h2>
+        <div class="row">
+          <div class="col-sm-6 col-md-4 mb-4">
+            <figure>
+              <a href="13. Rechazo.jpeg" class="glightbox" data-gallery="ch10">
+                <img src="13. Rechazo.jpeg" class="thumb" alt="Rechazo">
+              </a>
+              <figcaption>Rechazo<br><small><em>(Alberto Valdes / EFE)</em></small></figcaption>
+            </figure>
+          </div>
+          <div class="col-sm-6 col-md-4 mb-4">
+            <figure>
+              <a href="13. Apruebo.jpeg" class="glightbox" data-gallery="ch10">
+                <img src="13. Apruebo.jpeg" class="thumb" alt="Apruebo">
+              </a>
+              <figcaption>Apruebo<br><small><em>(AFP)</em></small></figcaption>
+            </figure>
+          </div>
+          <div class="col-sm-6 col-md-4 mb-4">
+            <figure>
+              <a href="13. Voto.jpeg" class="glightbox" data-gallery="ch10">
+                <img src="13. Voto.jpeg" class="thumb" alt="The first agreement is announced">
+              </a>
+              <figcaption>September 4, 2022<br><small><em>(ADN Radio)</em></small></figcaption>
+            </figure>
+          </div>
+        </div>
+      </section>
+
     </div> <!-- /container -->
 
     <hr>
