--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -1149,18 +1149,18 @@
         <div class="row">
           <div class="col-sm-6 col-md-4 mb-4">
             <figure>
-              <a href="13. Rechazo.jpeg" class="glightbox" data-gallery="ch10">
-                <img src="13. Rechazo.jpeg" class="thumb" alt="Rechazo">
+              <a href="13. En contra.jpeg" class="glightbox" data-gallery="ch10">
+                <img src="13. En contra.jpeg" class="thumb" alt="Rechazo">
               </a>
-              <figcaption>Rechazo<br><small><em>(Alberto Valdes / EFE)</em></small></figcaption>
+              <figcaption>En contra<br><small><em>(Alberto Valdes / EFE)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
             <figure>
-              <a href="13. Apruebo.jpeg" class="glightbox" data-gallery="ch10">
-                <img src="13. Apruebo.jpeg" class="thumb" alt="Apruebo">
+              <a href="13. A favor.jpeg" class="glightbox" data-gallery="ch10">
+                <img src="13. A favor.jpeg" class="thumb" alt="Apruebo">
               </a>
-              <figcaption>Apruebo<br><small><em>(AFP)</em></small></figcaption>
+              <figcaption>A favor<br><small><em>(AFP)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
@@ -1168,7 +1168,7 @@
               <a href="13. Voto.jpeg" class="glightbox" data-gallery="ch10">
                 <img src="13. Voto.jpeg" class="thumb" alt="The first agreement is announced">
               </a>
-              <figcaption>September 4, 2022<br><small><em>(ADN Radio)</em></small></figcaption>
+              <figcaption>December 4, 2023<br><small><em>(ADN Radio)</em></small></figcaption>
             </figure>
           </div>
         </div>
