--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -1152,7 +1152,7 @@
               <a href="13. En contra.jpeg" class="glightbox" data-gallery="ch10">
                 <img src="13. En contra.jpeg" class="thumb" alt="Rechazo">
               </a>
-              <figcaption>En contra<br><small><em>(Alberto Valdes / EFE)</em></small></figcaption>
+              <figcaption>En contra<br><small><em>(Sofía Yanjarí / El País)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
@@ -1160,7 +1160,7 @@
               <a href="13. A favor.jpeg" class="glightbox" data-gallery="ch10">
                 <img src="13. A favor.jpeg" class="thumb" alt="Apruebo">
               </a>
-              <figcaption>A favor<br><small><em>(AFP)</em></small></figcaption>
+              <figcaption>A favor<br><small><em>(Prensa Renovación Nacional)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
