--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -826,7 +826,7 @@
           <div class="col-sm-6 col-md-4 mb-4">
             <figure>
               <a href="13. Rechazo.jpeg" class="glightbox" data-gallery="ch10">
-                <img src="13. Rechazo.jpeg" class="thumb" alt="Rechazo">
+                <img src="13. Rechazo.jpeg" class="thumb" alt="A Rechazo voter">
               </a>
               <figcaption>Rechazo<br><small><em>(Alberto Valdes / EFE)</em></small></figcaption>
             </figure>
@@ -834,7 +834,7 @@
           <div class="col-sm-6 col-md-4 mb-4">
             <figure>
               <a href="13. Apruebo.jpeg" class="glightbox" data-gallery="ch10">
-                <img src="13. Apruebo.jpeg" class="thumb" alt="Apruebo">
+                <img src="13. Apruebo.jpeg" class="thumb" alt="Frente Amplio campaigning for change">
               </a>
               <figcaption>Apruebo<br><small><em>(AFP)</em></small></figcaption>
             </figure>
@@ -842,7 +842,7 @@
           <div class="col-sm-6 col-md-4 mb-4">
             <figure>
               <a href="13. Voto.jpeg" class="glightbox" data-gallery="ch10">
-                <img src="13. Voto.jpeg" class="thumb" alt="The first agreement is announced">
+                <img src="13. Voto.jpeg" class="thumb" alt="The proposal is rejected">
               </a>
               <figcaption>September 4, 2022<br><small><em>(ADN Radio)</em></small></figcaption>
             </figure>
@@ -1150,7 +1150,7 @@
           <div class="col-sm-6 col-md-4 mb-4">
             <figure>
               <a href="13. En contra.jpeg" class="glightbox" data-gallery="ch10">
-                <img src="13. En contra.jpeg" class="thumb" alt="Rechazo">
+                <img src="13. En contra.jpeg" class="thumb" alt="An En Contra voter">
               </a>
               <figcaption>En contra<br><small><em>(Sofía Yanjarí / El País)</em></small></figcaption>
             </figure>
@@ -1158,7 +1158,7 @@
           <div class="col-sm-6 col-md-4 mb-4">
             <figure>
               <a href="13. A favor.jpeg" class="glightbox" data-gallery="ch10">
-                <img src="13. A favor.jpeg" class="thumb" alt="Apruebo">
+                <img src="13. A favor.jpeg" class="thumb" alt="Renovación Nacional campaigning for change">
               </a>
               <figcaption>A favor<br><small><em>(Prensa Renovación Nacional)</em></small></figcaption>
             </figure>
@@ -1166,9 +1166,9 @@
           <div class="col-sm-6 col-md-4 mb-4">
             <figure>
               <a href="13. Voto.jpeg" class="glightbox" data-gallery="ch10">
-                <img src="13. Voto.jpeg" class="thumb" alt="The first agreement is announced">
+                <img src="13. Voto.jpeg" class="thumb" alt="The proposal is rejected">
               </a>
-              <figcaption>December 4, 2023<br><small><em>(ADN Radio)</em></small></figcaption>
+              <figcaption>December 17, 2023<br><small><em>(ADN Radio)</em></small></figcaption>
             </figure>
           </div>
         </div>
