--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -1004,12 +1004,20 @@
           <div class="col-sm-6 col-md-4 mb-4">
             <figure>
               <a href="15. Crispi.jpeg" class="glightbox" data-gallery="ch15">
-                <img src="15. Crispi.jpeg" class="thumb" alt="Miguel Crispi">
+                <img src="15. Crispi.jpeg" class="thumb" alt="Democracia Viva">
               </a>
               <figcaption>Miguel Crispi<br><small><em>(Ex Ante / Agencia Uno)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
+            <figure>
+              <a href="15. Jackson.jpeg" class="glightbox" data-gallery="ch15">
+                <img src="15. Jackson.jpeg" class="thumb" alt="Moral Superiority">
+              </a>
+              <figcaption>Giorgio Jackson<br><small><em>(La Tercera)</em></small></figcaption>
+            </figure>
+          </div>
+      <div class="col-sm-6 col-md-4 mb-4">
             <figure>
               <a href="15. First Retiro.jpeg" class="glightbox" data-gallery="ch15">
                 <img src="15. First Retiro.jpeg" class="thumb" alt="First Pension Funds Withdrawal">
