--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -966,15 +966,23 @@
               <a href="15. Hambre.jpeg" class="glightbox" data-gallery="ch15">
                 <img src="15. Hambre.jpeg" class="thumb" alt="Hambre">
               </a>
-              <figcaption>"Hambre"<br><small><em>(El Mercurio / Héctor Aravena)</em></small></figcaption>
+              <figcaption>"Hambre"<br><small><em>(La Tercera)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
             <figure>
+              <a href="15. Naranjo.jpeg" class="glightbox" data-gallery="ch15">
+                <img src="15. Naranjo.jpeg" class="thumb" alt="Jaime Naranjo">
+              </a>
+              <figcaption>Jaime Naranjo in Congress<br><small><em>(Johanna Zárate/EFE)</em></small></figcaption>
+            </figure>
+          </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+            <figure>
               <a href="15. Depolo.jpeg" class="glightbox" data-gallery="ch15">
                 <img src="15. Depolo.jpeg" class="thumb" alt="Sebastián Depolo">
               </a>
-              <figcaption>Sebastián Depolo<br><small><em>(El Mercurio / Héctor Aravena)</em></small></figcaption>
+              <figcaption>Sebastián Depolo in El Mercurio<br><small><em>(Héctor Aravena / El Mercurio)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
@@ -990,7 +998,7 @@
               <a href="15. Duran.jpeg" class="glightbox" data-gallery="ch15">
                 <img src="15. Duran.jpeg" class="thumb" alt="Gonzalo Durán">
               </a>
-              <figcaption>Gonzalo Durán<br><small><em>(La Tercera)</em></small></figcaption>
+              <figcaption>Gonzalo Durán with Perro Matapacos<br><small><em>(La Tercera)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
@@ -998,7 +1006,7 @@
               <a href="15. Jara.jpeg" class="glightbox" data-gallery="ch15">
                 <img src="15. Jara.jpeg" class="thumb" alt="Jeannette Jara">
               </a>
-              <figcaption>Jeannette Jara<br><small><em>(El Líbero)</em></small></figcaption>
+              <figcaption>Jeannette Jara with Perro Matapacos<br><small><em>(El Líbero)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
