--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -974,7 +974,7 @@
               <a href="15. Naranjo.jpeg" class="glightbox" data-gallery="ch15">
                 <img src="15. Naranjo.jpeg" class="thumb" alt="Jaime Naranjo">
               </a>
-              <figcaption>Jaime Naranjo in Congress<br><small><em>(Johanna Zárate/EFE)</em></small></figcaption>
+              <figcaption>Jaime Naranjo in a 14 hour fillibuster to impeach Sebastián Piñera, in Congress<br><small><em>(Johanna Zárate/EFE)</em></small></figcaption>
             </figure>
           </div>
         <div class="col-sm-6 col-md-4 mb-4">
@@ -982,7 +982,7 @@
               <a href="15. Depolo.jpeg" class="glightbox" data-gallery="ch15">
                 <img src="15. Depolo.jpeg" class="thumb" alt="Sebastián Depolo">
               </a>
-              <figcaption>Sebastián Depolo in El Mercurio<br><small><em>(Héctor Aravena / El Mercurio)</em></small></figcaption>
+              <figcaption>Sebastián Depolo anticipating his coalition would induce instability, in El Mercurio<br><small><em>(Héctor Aravena / El Mercurio)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
@@ -990,7 +990,7 @@
               <a href="15. Toha.jpeg" class="glightbox" data-gallery="ch15">
                 <img src="15. Toha.jpeg" class="thumb" alt="Carolina Tohá on the border">
               </a>
-              <figcaption>Carolina Tohá on the border<br><small><em>(Publimetro)</em></small></figcaption>
+              <figcaption>Carolina Tohá testing a megaphone speaker, on the northern border<br><small><em>(Publimetro)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
