--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -998,7 +998,7 @@
               <a href="15. Duran.jpeg" class="glightbox" data-gallery="ch15">
                 <img src="15. Duran.jpeg" class="thumb" alt="Gonzalo Durán">
               </a>
-              <figcaption>Gonzalo Durán with Perro Matapacos<br><small><em>(La Tercera)</em></small></figcaption>
+              <figcaption>Gonzalo Durán with Perro Matapacos, in Santiago<br><small><em>(La Tercera)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
@@ -1006,7 +1006,7 @@
               <a href="15. Jara.jpeg" class="glightbox" data-gallery="ch15">
                 <img src="15. Jara.jpeg" class="thumb" alt="Jeannette Jara">
               </a>
-              <figcaption>Jeannette Jara with Perro Matapacos<br><small><em>(El Líbero)</em></small></figcaption>
+              <figcaption>Jeannette Jara with Perro Matapacos, in Santiago<br><small><em>(El Líbero)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
@@ -1014,7 +1014,7 @@
               <a href="15. Crispi.jpeg" class="glightbox" data-gallery="ch15">
                 <img src="15. Crispi.jpeg" class="thumb" alt="Democracia Viva">
               </a>
-              <figcaption>Miguel Crispi<br><small><em>(Ex Ante / Agencia Uno)</em></small></figcaption>
+              <figcaption>Miguel Crispi declaring before Congress for his role in the Democracia Viva scandal<br><small><em>(Ex Ante / Agencia Uno)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
@@ -1022,7 +1022,7 @@
               <a href="15. Jackson.jpeg" class="glightbox" data-gallery="ch15">
                 <img src="15. Jackson.jpeg" class="thumb" alt="Moral Superiority">
               </a>
-              <figcaption>Giorgio Jackson<br><small><em>(La Tercera)</em></small></figcaption>
+              <figcaption>Giorgio Jackson speaking about "moral superiority" in front of a calendar with Giorgio Jackson holding a pink gas cylinder<br><small><em>(La Tercera)</em></small></figcaption>
             </figure>
           </div>
       <div class="col-sm-6 col-md-4 mb-4">
