--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -995,10 +995,10 @@
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
             <figure>
-              <a href="15. Duran.jpeg" class="glightbox" data-gallery="ch15">
-                <img src="15. Duran.jpeg" class="thumb" alt="Gonzalo Durán">
+              <a href="15. Thayer Correa.jpeg" class="glightbox" data-gallery="ch15">
+                <img src="15. Thayer Correa.jpeg" class="thumb" alt="Luis Thayer Correa">
               </a>
-              <figcaption>Gonzalo Durán with Perro Matapacos, in Santiago<br><small><em>(La Tercera)</em></small></figcaption>
+              <figcaption>Luis Thayer Correa explaining to Congress that illegal immigrants could not be deported because of lack of printers<br><small><em>(Ex-Ante)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
@@ -1006,7 +1006,7 @@
               <a href="15. Jara.jpeg" class="glightbox" data-gallery="ch15">
                 <img src="15. Jara.jpeg" class="thumb" alt="Jeannette Jara">
               </a>
-              <figcaption>Jeannette Jara with Perro Matapacos, in Santiago<br><small><em>(El Líbero)</em></small></figcaption>
+              <figcaption>Jeannette Jara with a Perro Matapacos t-shirt, in Santiago<br><small><em>(El Líbero)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
