--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -969,12 +969,12 @@
               <figcaption>"Hambre"<br><small><em>(La Tercera)</em></small></figcaption>
             </figure>
           </div>
-          <div class="col-sm-6 col-md-4 mb-4">
+         <div class="col-sm-6 col-md-4 mb-4">
             <figure>
-              <a href="15. Naranjo.jpeg" class="glightbox" data-gallery="ch15">
-                <img src="15. Naranjo.jpeg" class="thumb" alt="Jaime Naranjo">
+              <a href="15. Kerry.jpeg" class="glightbox" data-gallery="ch15">
+                <img src="15. Kerry.jpeg" class="thumb" alt="John Kerry">
               </a>
-              <figcaption>Jaime Naranjo in a 14 hour fillibuster to impeach Sebastián Piñera, in Congress<br><small><em>(Johanna Zárate/EFE)</em></small></figcaption>
+              <figcaption>Boric and Kerry in the 2022 North American tour<br><small><em>(X / @gabrielboric)</em></small></figcaption>
             </figure>
           </div>
         <div class="col-sm-6 col-md-4 mb-4">
@@ -986,6 +986,14 @@
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
+            <figure>
+              <a href="15. Naranjo.jpeg" class="glightbox" data-gallery="ch15">
+                <img src="15. Naranjo.jpeg" class="thumb" alt="Jaime Naranjo">
+              </a>
+              <figcaption>Jaime Naranjo in a 14 hour fillibuster to impeach Sebastián Piñera, in Congress<br><small><em>(Johanna Zárate/EFE)</em></small></figcaption>
+            </figure>
+          </div>
+      <div class="col-sm-6 col-md-4 mb-4">
             <figure>
               <a href="15. Toha.jpeg" class="glightbox" data-gallery="ch15">
                 <img src="15. Toha.jpeg" class="thumb" alt="Carolina Tohá on the border">
