--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -990,7 +990,7 @@
               <a href="15. Naranjo.jpeg" class="glightbox" data-gallery="ch15">
                 <img src="15. Naranjo.jpeg" class="thumb" alt="Jaime Naranjo">
               </a>
-              <figcaption>Jaime Naranjo in a 14 hour fillibuster to impeach Sebastián Piñera, in Congress<br><small><em>(Johanna Zárate/EFE)</em></small></figcaption>
+              <figcaption>Jaime Naranjo in a 14 hour filibuster to impeach Sebastián Piñera, in Congress<br><small><em>(Johanna Zárate/EFE)</em></small></figcaption>
             </figure>
           </div>
       <div class="col-sm-6 col-md-4 mb-4">
