--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -139,7 +139,7 @@
               <a href="2. Pleb1988.jpeg" class="glightbox" data-gallery="ch2">
                 <img src="2. Pleb1988.jpeg" class="thumb" alt="The 1988 Plebiscite">
               </a>
-              <figcaption>The 1988 Plebiscite<br><small><em>(Alvaro Hoppe Guiñez)</em></small></figcaption>
+              <figcaption>The 1988 Plebiscite<br><small><em>(Alvaro Hoppe Guiñez / Caption Magazine)</em></small></figcaption>
             </figure>
           </div>
         </div>
@@ -170,7 +170,7 @@
               <a href="3. Kissinger.jpeg" class="glightbox" data-gallery="ch3">
                 <img src="3. Kissinger.jpeg" class="thumb" alt="Henry Kissinger with Augusto Pinochet (1976)">
               </a>
-              <figcaption>Henry Kissinger with Augusto Pinochet (1976)<br><small><em>(Wikimedia Commons)</em></small></figcaption>
+              <figcaption>Henry Kissinger with Augusto Pinochet (1976)<br><small><em>(Government of Chile / Minrel)</em></small></figcaption>
             </figure>
           </div>
         </div>
@@ -274,7 +274,7 @@
               <a href="5. Chile OCDE.jpeg" class="glightbox" data-gallery="ch5">
                 <img src="5. Chile OCDE.jpeg" class="thumb" alt="OCDE invitation">
               </a>
-              <figcaption>Michelle Bachelet (and Andrés Velasco) accept invitation to join OCDE from Secretary General José Ángel Gurría.<br><small><em>(EFE)</em></small></figcaption>
+              <figcaption>Michelle Bachelet (and Andrés Velasco) accepts invitation to join OCDE from Secretary General José Ángel Gurría.<br><small><em>(EFE)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
@@ -453,7 +453,7 @@
               <a href="9. La Marcha mas Grande.jpeg" class="glightbox" data-gallery="ch9">
                 <img src="9. La Marcha mas Grande.jpeg" class="thumb" alt="La Marcha más Grande">
               </a>
-              <figcaption>"La Marcha más Grande"<br><small><em>(BBC / Susana Hidalgo)</em></small></figcaption>
+              <figcaption>"La Marcha más Grande"<br><small><em>(Susana Hidalgo / BBC)</em></small></figcaption>
             </figure>
           </div>
 
@@ -462,7 +462,7 @@
               <a href="9. Violador.jpeg" class="glightbox" data-gallery="ch9">
                 <img src="9. Violador.jpeg" class="thumb" alt="Un violador en tu camino">
               </a>
-              <figcaption>"Un violador en tu camino"<br><small><em>(Martin Bernetti/AFP)</em></small></figcaption>
+              <figcaption>"Un violador en tu camino"<br><small><em>(Martin Bernetti / AFP)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
@@ -478,7 +478,7 @@
               <a href="9. Baila.jpeg" class="glightbox" data-gallery="ch9">
                 <img src="9. Baila.jpeg" class="thumb" alt="El que no baila, no pasa">
               </a>
-              <figcaption>"El que no baila, no pasa"<br><small><em>(Contexto / Agencia UNO)</em></small></figcaption>
+              <figcaption>"El que no baila, no pasa"<br><small><em>(Agencia Uno / Contexto)</em></small></figcaption>
             </figure>
           </div>
       <div class="col-sm-6 col-md-4 mb-4">
@@ -527,7 +527,7 @@
               <a href="9. Resistencia.jpeg" class="glightbox" data-gallery="ch9">
                 <img src="9. Resistencia.jpeg" class="thumb" alt="La primera línea">
               </a>
-              <figcaption>"La primera línea"<br><small><em>(Pablo Rojas Madariaga/NurPhoto/PA Image)</em></small></figcaption>
+              <figcaption>"La primera línea"<br><small><em>(Pablo Rojas Madariaga / NurPhoto / PA Image)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
@@ -600,7 +600,7 @@
               <a href="10.2. The announcment.jpeg" class="glightbox" data-gallery="ch10">
                 <img src="10.2. The announcment.jpeg" class="thumb" alt="The first agreement is announced">
               </a>
-              <figcaption>The first agreement is announced<br><small><em>(La Tercera / Richard Ulloa)</em></small></figcaption>
+              <figcaption>The first agreement is announced<br><small><em>(Richard Ulloa / La Tercera)</em></small></figcaption>
             </figure>
           </div>
         </div>
@@ -730,7 +730,7 @@
               <a href="12.2. Elisa Loncon.jpeg" class="glightbox" data-gallery="ch12">
                 <img src="12.2. Elisa Loncon.jpeg" class="thumb" alt="Elisa Loncón">
               </a>
-              <figcaption>Elisa Loncon<br><small><em>(Time / Cristian Soto Quiroz)</em></small></figcaption>
+              <figcaption>Elisa Loncon<br><small><em>(Cristian Soto Quiroz / Time)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
@@ -738,7 +738,7 @@
               <a href="12.3. La mesa.jpeg" class="glightbox" data-gallery="ch12">
                 <img src="12.3. La mesa.jpeg" class="thumb" alt="La mesa">
               </a>
-              <figcaption>Elisa Loncon and Jaime Bassa<br><small><em>(Twitter / @Jaime_Bassa)</em></small></figcaption>
+              <figcaption>Elisa Loncon and Jaime Bassa<br><small><em>(X / @Jaime_Bassa)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
@@ -786,7 +786,7 @@
               <a href="12. Proposal.jpeg" class="glightbox" data-gallery="ch12">
                 <img src="12. Proposal.jpeg" class="thumb" alt="The first proposal">
               </a>
-              <figcaption>The first proposal<br><small><em>(Marcelo Hernandez/Getty Images)</em></small></figcaption>
+              <figcaption>The first proposal<br><small><em>(Marcelo Hernández / Getty Images)</em></small></figcaption>
             </figure>
           </div>
         </div>
@@ -990,7 +990,7 @@
               <a href="15. Naranjo.jpeg" class="glightbox" data-gallery="ch15">
                 <img src="15. Naranjo.jpeg" class="thumb" alt="Jaime Naranjo">
               </a>
-              <figcaption>Jaime Naranjo in a 14 hour filibuster to impeach Sebastián Piñera, in Congress<br><small><em>(Johanna Zárate/EFE)</em></small></figcaption>
+              <figcaption>Jaime Naranjo in a 14 hour filibuster to impeach Sebastián Piñera, in Congress<br><small><em>(Johanna Zárate / EFE)</em></small></figcaption>
             </figure>
           </div>
       <div class="col-sm-6 col-md-4 mb-4">
@@ -1003,14 +1003,6 @@
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
             <figure>
-              <a href="15. Thayer Correa.jpeg" class="glightbox" data-gallery="ch15">
-                <img src="15. Thayer Correa.jpeg" class="thumb" alt="Luis Thayer Correa">
-              </a>
-              <figcaption>Luis Thayer Correa explaining to Congress that illegal immigrants could not be deported because of lack of printers<br><small><em>(Ex-Ante)</em></small></figcaption>
-            </figure>
-          </div>
-          <div class="col-sm-6 col-md-4 mb-4">
-            <figure>
               <a href="15. Jara.jpeg" class="glightbox" data-gallery="ch15">
                 <img src="15. Jara.jpeg" class="thumb" alt="Jeannette Jara">
               </a>
@@ -1019,10 +1011,18 @@
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
             <figure>
+              <a href="15. Thayer Correa.jpeg" class="glightbox" data-gallery="ch15">
+                <img src="15. Thayer Correa.jpeg" class="thumb" alt="Luis Thayer Correa">
+              </a>
+              <figcaption>Luis Thayer Correa explaining to Congress that illegal immigrants could not be deported because of the lack of printers<br><small><em>(Ex-Ante)</em></small></figcaption>
+            </figure>
+          </div>
+      <div class="col-sm-6 col-md-4 mb-4">
+            <figure>
               <a href="15. Crispi.jpeg" class="glightbox" data-gallery="ch15">
                 <img src="15. Crispi.jpeg" class="thumb" alt="Democracia Viva">
               </a>
-              <figcaption>Miguel Crispi declaring before Congress for his role in the Democracia Viva scandal<br><small><em>(Ex Ante / Agencia Uno)</em></small></figcaption>
+              <figcaption>Miguel Crispi declaring before Congress for his role in the Democracia Viva scandal<br><small><em>(Ex-Ante / Agencia Uno)</em></small></figcaption>
             </figure>
           </div>
           <div class="col-sm-6 col-md-4 mb-4">
