--- a/index.html
+++ b/index.html
@@ -3255,9 +3255,12 @@ https://www.ft.com/content/70611572-1563-47d1-b0d7-0bc9aadf9138?accessToken=zwAA
 </ul>
 
 <hr>
-<h2 id="links">Links</h2>
-<p><a href="https://kennethbunker.github.io/">Home</a> / <a href="https://uss.academia.edu/KennethBunker">Academia</a> /  <a href="https://publons.com/researcher/1861400/kenneth-bunker/">Publons</a> / <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&amp;hl">Google Scholar</a> / <a href="https://www.researchgate.net/profile/Kenneth-Bunker">ResearchGate</a> / <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a> / <a href="https://orcid.org/0000-0002-4579-6132">Orcid</a> / <a href="https://www.webofscience.com/wos/author/record/R-4439-2018">Web of Science</a> / <a href="https://twitter.com/kennethbunker">X</a> / <a href="https://investigadores.anid.cl/es/public_search/researcher?id=8287">Anid</a> / <a href="https://kennethbunker.github.io/columns">Columns</a> / <a href="https://kennethbunker.github.io/press">Press (Global)</a> / <a href="https://kennethbunker.github.io/prensa">Prensa (Chile)</a> / <a href="https://kennethbunker.github.io/interviews">Interviews</a> / <a href="https://cl.linkedin.com/in/kennethbunker">LinkedIn</a> / <a href="https://kennethbunker.github.io/covers">On the Front Page</a> / <a href="https://tresquintos.cl">Tresquintos</a> / <a href="https://twitter.com/cuatroseptimos">Cuatroseptimos</a> / <a href="https://politicotechglobal.com">Politico Tech Global</a> / <a href="mailto:kbunker@politicotechglobal.com">E-mail</a> / <a href="https://www.uss.cl/">Universidad San Sebastián</a> / <a href="https://www.uss.cl/facultades-y-carreras/economia-y-gobierno/">Facultad de Economía, Negocios, y Gobierno</a> / <a href="https://www.researchgate.net/lab/Laboratorio-de-Democracia-y-Gobierno-Kenneth-Bunker">Democracy and Government Lab</a></p>
-
+    <div class="text-center my-4">
+      <a class="btn btn-sm btn-outline-secondary" href="#top">Back to top</a>
+      <a class="btn btn-sm btn-outline-primary ml-2" href="https://kennethbunker.github.io/theseus/">Back to book page</a>
+    </div>
+  </div>
+</div>
 <hr>
 </div>
 </div>
