--- a/theseus/index.html
+++ b/theseus/index.html
@@ -108,7 +108,7 @@
     <div style="display:inline-block;"><br><br>
 
       <h2>Chile's Transformation Amidst Crisis: The Theseus Paradox</h2>
-      <p class="text-muted">Welcome to the author's website of Chile's Transformation Amidst Crisis: The Theseus Paradox. Here you can find supplemental material, such as data, code, and references.</p>
+      <p class="text-muted">Welcome to the author's companion website of Chile's Transformation Amidst Crisis: The Theseus Paradox. Here you can find supplemental material, such as data, code, and references.</p>
 
     </div>
 
