--- a/theseus/buy/index.html
+++ b/theseus/buy/index.html
@@ -102,47 +102,30 @@
 
 <div class="container mt-5">
     <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
-        <a class="navbar-brand mx-0 mr-sm-auto" href="https://kennethbunker.github.io">
-          
-          Kenneth Bunker
-        </a>
-        <div class="navbar-nav flex-row flex-wrap justify-content-center"> 
-    
-                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/cv.pdf">
-                        CV
-                    </a>
-                        <span class="nav-item navbar-text mx-1">/</span>  
-                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/press">
-                        Press
-                    </a>
-                        <span class="nav-item navbar-text mx-1">/</span>    
-                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/prensa">
-                        Prensa
-                    </a>
-                        <span class="nav-item navbar-text mx-1">/</span>  
-                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/columns">
-                        Columns
-                    </a>
-                        <span class="nav-item navbar-text mx-1">/</span>
-                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/theseus">
-                        Book
-                    </a>                                    
-                        <span class="nav-item navbar-text mx-1">/</span>
-                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/contact">
-                        Contact
-                    </a>  
-        </div>
-    </nav>
+    <a class="navbar-brand mx-0 mr-sm-auto" href="https://kennethbunker.github.io">Kenneth Bunker</a>
+<div class="navbar-nav flex-row flex-wrap justify-content-center">
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/">Home</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/press">In the Press</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/prensa">Prensa</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/columns">Columns</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus">Book</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/contact">Contact</a>
 </div>
-<hr>
+  </nav>
+</div>
+<hr> 
+
 
 <div id="content">
   <div class="container">
-    <p style="display:inline-block;"><br><br>
 
-      <strong>Chile's Transformation Amidst Crisis: The Theseus Paradox</strong> <br><br>
 
-      Welcome to the author's website of <em>Chile's Transformation Amidst Crisis: The Theseus Paradox</em>. Here you can find supplemental material, such as data, code, and references.<br><br>
+    <div style="display:inline-block;"><br><br>
+
+      <h2>Chile's Transformation Amidst Crisis: The Theseus Paradox</h2>
+      <p class="text-muted">Welcome to the author's companion website of Chile's Transformation Amidst Crisis: The Theseus Paradox. Here you can find supplemental material, such as data, code, and references.</p>
+
+    </div>
 
       <hr>
 
