--- a/theseus/buy/index.html
+++ b/theseus/buy/index.html
@@ -206,6 +206,21 @@
 <hr>
 
 <div style="border: 1px solid #ccc; border-radius: 10px; margin: 40px auto; padding: 20px; background-color: #f9f9f9; max-width: 700px; text-align: center;">
+  <p style="margin-bottom: 20px;"><strong>Official Website</strong></p>
+
+  <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 20px;">
+
+    <a href="https://link.springer.com/book/9783031964626" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Palgrave_Macmillan_Logo.svg/440px-Palgrave_Macmillan_Logo.svg.png" alt="Palgrave Macmillan" style="height: 40px;"></a>
+
+
+  </div>
+</div>
+
+
+<hr>
+
+
+<div style="border: 1px solid #ccc; border-radius: 10px; margin: 40px auto; padding: 20px; background-color: #f9f9f9; max-width: 700px; text-align: center;">
   <p style="margin-bottom: 20px;"><strong>Where to Buy:</strong> Available at all major bookstores worldwide</p>
 
   <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 20px;">
