--- a/theseus/buy/index.html
+++ b/theseus/buy/index.html
@@ -141,11 +141,12 @@
 
 
 <!-- Clickable Top Banner -->
-<a href="https://link.springer.com/book/9783031964626?utm_medium=affiliate&utm_source=commission_junction_authors&utm_campaign=CONR_BOOKS_ECOM_GL_PBOK_ALWYS_DEEPLINK&utm_content=deeplink&utm_term=PID101446916&CJEVENT=c4bf33ef501f11f0808703740a18b8f9#overview" target="_blank" style="text-decoration: none;">
-  <div class="banner-container">
-    <img src="../img/banner.jpg" alt="Banner" class="banner-image">
+<a href="https://link.springer.com/book/9783031964626?utm_medium=affiliate&utm_source=commission_junction_authors&utm_campaign=CONR_BOOKS_ECOM_GL_PBOK_ALWYS_DEEPLINK&utm_content=deeplink&utm_term=PID101446916&CJEVENT=c4bf33ef501f11f0808703740a18b8f9#overview" target="_blank" rel="noopener noreferrer" style="text-decoration: none;">
+  <div class="banner-container" role="img" aria-label="Pre-order The Theseus Paradox on Springer">
+    <img src="https://kennethbunker.github.io/img/banner.jpg" alt="Pre-order The Theseus Paradox" class="banner-image">
   </div>
 </a>
+
 
 <style>
   .banner-container {
