--- a/theseus/index.html
+++ b/theseus/index.html
@@ -125,6 +125,12 @@
       </p>
     </div>
 
+    <div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
+      <p style="margin: 0;">
+        <strong>Also available:<br>Barnes & Noble - Wallmart - Amazon</strong><br><br>
+      </p>
+    </div>
+
     <hr>
 
         <!-- ===== FRONT + BACK MATTER ===== -->
