--- a/theseus/index.html
+++ b/theseus/index.html
@@ -127,7 +127,7 @@
 
     <div style="border: 1px solid #999; border-radius: 5px; padding: 5px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
       <p style="margin: 0;">
-        <strong>Also available:<br><a href="https://amazon.com" target="_blank" rel="noopener noreferrer" style="text-decoration: none; font-weight: bold; color: #0077cc;">Barnes & Noble</a> - <a href="https://amazon.com" target="_blank" rel="noopener noreferrer" style="text-decoration: none; font-weight: bold; color: #0077cc;">Wallmart</a>  - <a href="https://amazon.com" target="_blank" rel="noopener noreferrer" style="text-decoration: none; font-weight: bold; color: #0077cc;">Amazon</a> </strong><br><br>
+        <strong>Also available:<br><a href="https://kennethbunker.github.io/theseus/buy" target="_blank" rel="noopener noreferrer" style="text-decoration: none; font-weight: bold; color: #0077cc;">Barnes & Noble</a> - <a href="https://kennethbunker.github.io/theseus/buy" target="_blank" rel="noopener noreferrer" style="text-decoration: none; font-weight: bold; color: #0077cc;">Wallmart</a>  - <a href="https://kennethbunker.github.io/theseus/buy" target="_blank" rel="noopener noreferrer" style="text-decoration: none; font-weight: bold; color: #0077cc;">Amazon</a> </strong><br><br>
       </p>
     </div>
 
