--- a/theseus/index.html
+++ b/theseus/index.html
@@ -129,9 +129,10 @@
   <p style="margin: 0;">
     <strong>Also available: 
       <a href="https://kennethbunker.github.io/theseus/buy" target="_blank" rel="noopener noreferrer" style="text-decoration: none; font-weight: bold; color: #0077cc;">Barnes & Noble</a> –
-      <a href="https://kennethbunker.github.io/theseus/buy" target="_blank" rel="noopener noreferrer" style="text-decoration: none; font-weight: bold; color: #0077cc;">Walmart</a> –
+      <a href="https://kennethbunker.github.io/theseus/buy" target="_blank" rel="noopener noreferrer" style="text-decoration: none; font-weight: bold; color: #0077cc;">Wallmart</a> –
       <a href="https://kennethbunker.github.io/theseus/buy" target="_blank" rel="noopener noreferrer" style="text-decoration: none; font-weight: bold; color: #0077cc;">Amazon</a>
-    </strong>
+      <a href="https://kennethbunker.github.io/theseus/buy" target="_blank" rel="noopener noreferrer" style="text-decoration: none; font-weight: bold; color: #0077cc;">Waterstones</a>
+      </strong>
   </p>
 </div>
 
