--- a/theseus/index.html
+++ b/theseus/index.html
@@ -127,10 +127,10 @@
 
    <div style="border: 1px solid #999; border-radius: 12px; padding: 20px; margin: 20px 0; width: 100%; text-align: center; box-sizing: border-box;">
   <p style="margin: 0;">
-    <strong>Also available: 
+    <strong>Also available at: 
       <a href="https://kennethbunker.github.io/theseus/buy" target="_blank" rel="noopener noreferrer" style="text-decoration: none; font-weight: bold; color: #0077cc;">Barnes & Noble</a> –
       <a href="https://kennethbunker.github.io/theseus/buy" target="_blank" rel="noopener noreferrer" style="text-decoration: none; font-weight: bold; color: #0077cc;">Wallmart</a> –
-      <a href="https://kennethbunker.github.io/theseus/buy" target="_blank" rel="noopener noreferrer" style="text-decoration: none; font-weight: bold; color: #0077cc;">Amazon</a>
+      <a href="https://kennethbunker.github.io/theseus/buy" target="_blank" rel="noopener noreferrer" style="text-decoration: none; font-weight: bold; color: #0077cc;">Amazon</a> –
       <a href="https://kennethbunker.github.io/theseus/buy" target="_blank" rel="noopener noreferrer" style="text-decoration: none; font-weight: bold; color: #0077cc;">Waterstones</a>
       </strong>
   </p>
